# libffm

./: .gitignore  CMakeLists.txt  README.org  ffm.h
include/: CMakeLists.txt  ffm.h.in
src/: CMakeLists.txt  clwrapper.h  ffm-train.cc  ffm.cc  update_block.cl
tests/: CMakeLists.txt
tests/resources/: dummy  dummy2
